syntax = "proto3";

package golden_gate;

option go_package = "github.com/BoostyLabs/casper-eth-bridge/boosty-communication/go-gen/networks;pb_networks";

enum NetworkType {
    NT_EVM = 0;
    NT_CASPER = 1;
    NT_SOLANA = 2;
}

message ConnectedNetworksResponse {
    message Network {
        uint32 id = 1;
        string name = 2;
        NetworkType type = 3;
        bool is_testnet = 4;
    }

    repeated Network networks = 1;
}

message SupportedTokensRequest {
    uint32 network_id = 1; 
}

message TokensResponse {
    message TokenAddress {
        uint32 network_id = 1;
        string address = 2;
        uint32 decimals = 3;
    }

    message Token {
        uint32 id = 1;
        string short_name = 2;
        string long_name = 3;
        repeated TokenAddress addresses = 4;
    }

    repeated Token tokens = 1;
}